Closed Bug 126492 Opened 23 years ago Closed 23 years ago

npmozax ActiveX plugin support for <object> tag

Categories

(Core Graveyard :: Plug-ins, defect)

x86
Windows 95
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.0

People

(Reporter: Paul.Oswald, Assigned: adamlock)

Details

Attachments

(2 files)

BuildID: 2002020406 Adam Lock's plugin that loads ActiveX should handle an activeX object specified in an <OBJECT> tag. A bug(103940) was filed to fix the way Mozilla sent <PARAM> data in. This bug was FIXED and VERIFIED but the npmozax.dll was never updated to support this change. Reproducible: Always Steps to Reproduce: 1. build and install the project in /embedding/browser/activex/src/plugin 2. try to load http://www.iol.ie/~locka/mozilla/calendar.htm to check it 3. Load an object tag of the form: <OBJECT name="test"> <PARAM> </PARAM> <OBJECT> Actual Results: Embed tag works. Object tag doesn't when sending in parameters. I think the problem here is that the plugin hasn't been updated to look for argn[]=null and argv[]="PARAM" in NewControl() (LegacyPlugin.cpp) as was discussed in bug 103940. There is a second problem in that there are two different variables called i in similar scope. I created a patch against mozilla 0.9.8 to fix these problems. It only changes a few lines.
I don't have much experience with making patches so let me know if I got something wrong (I have been having trouble with my UNIX/Windows EOL characters.)
-->over to Adam Lock for reviews
Assignee: av → adamlock
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: nsbeta1, patch, review
Attached patch Better patchSplinter Review
This patch hopefully does what you want but preserves the old param_arg1 behaviour so <EMBED> tags will still work. Let me know if this is satisfactory and I will check in as soon as the tree lets me.
OK. Looks good to me. Perhaps you should also update your project page to let people who use embed tags know that the "param_" prefix isn't strictly necessary (or is it still for some reason?) since they are going to be trimmed off when they get handed into LegacyPlugin.cpp. Thanks.
Target Milestone: --- → mozilla1.0
a=asa (on behalf of drivers) for checkin to 0.9.9
Keywords: mozilla0.9.9+
Fix is in. I'll review the docs to make sure they're clear on when param_ is required.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
verif(stamped)
Status: RESOLVED → VERIFIED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: