NOT PART OF BUILD. Allow plugin to read name/value PARAMs when embedded by an OBJECT tag. b=126492